<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aderleifilho.myfinances.AddTransactionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tipo_transferencia"
        android:id="@+id/labelTipoDeTransferencia"
        android:layout_alignParentStart="false"
        android:textStyle="bold"
        android:layout_below="@+id/FundoCinzaLayout" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroupTipoDeTransferencia"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/labelTipoDeTransferencia">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tipo_a"
            android:id="@+id/radio_tipo_a"
            android:checked="false"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tipo_b"
            android:id="@+id/radio_tipo_b"
            android:checked="false"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tipo_c"
            android:id="@+id/radio_tipo_c"
            android:checked="false"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tipo_d"
            android:id="@+id/radio_tipo_d"
            android:checked="false"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextContaOrigem"
            android:hint="@string/conta_origem"
            android:maxLength="6"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/labelTipoDeTransferencia"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextContaDestino"
            android:hint="@string/conta_destino"
            android:maxLength="6"
            android:layout_below="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="false"
        android:background="#c5c5c5"
        android:id="@+id/FundoCinzaLayout"
        android:layout_margin="5dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextValorDaTransferencia"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/valor_transferencia" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TaxaTotalLayout"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/taxa"
                android:id="@+id/taxaLabel"
                android:textAlignment="center"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textViewTaxa"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/total"
                android:id="@+id/textView4"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textViewTotal"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A5a5a5"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/button_data"
                android:id="@+id/buttonData"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textViewData"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupTipoDeTransferencia"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttonConfirmar">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancelar_transferencia"
            android:id="@+id/buttonCancelar"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_confirmar_transferencia"
            android:id="@+id/buttonConfirmar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
